tests/ui/incoherent-inherent-impls/insufficient-suggestion-issue-141679.stderr
error[E0116]: cannot define inherent `impl` for a type outside of the crate where the type is defined
  --> $DIR/insufficient-suggestion-issue-141679.rs:6:1
   |
LL | impl Function {}
   | ^^^^^^^^^^^^^ impl for type defined outside of crate
   |
   = note: define and implement a trait or new type instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0116`.
